@@ -419,6 +419,15 @@ sub handle_bounce_user {
   $args{days_since_subscribe} = $sdata? ((time - $sdata->{subtime})/86400): 0;
   $args{notify}               = [];
 
+  $args{'addr'}     = $user->strip || '';
+  $args{'fulladdr'} = $user->full || '';
+  if ($args{'addr'} =~ /.*\@(.*)$/) {
+    $args{'host'}   = $1;
+  }
+  else {
+    $args{'host'}   = '';
+  }
+
   # Now run the rule
   @final_actions =
     process_rule(name     => 'bounce_rules',
