@@ -1,3 +1,10 @@
+2001-06-23  Jason Tibbitts  <tibbs@math.uh.edu>
+
+	* lib/Mj/BounceHandler.pm (handle_bounce_user): Add addr,
+	fulladdr, and host variables to bounce_rules.
+
+	* lib/Mj/CommandProps.pm: ditto.
+	
 2001-06-23  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Config.pm:  (regen)  Bugfix:  Do not parse 
